--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+  <meta name="google-site-verification" content="hjgQT3BalC9wdFF54XdSEWAe8y4pSThcOXx7A8B1u5g" />
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
